--- a/base/finearts/templates/finearts/homepage.html
+++ b/base/finearts/templates/finearts/homepage.html
@@ -4,27 +4,21 @@
 {% block content %}
 <h1>Django Image Uploading</h1>
 <ul>
-  {% for portfolio in pics_list %}
-    
+  {% for portfolio in object_list %}
+	<div class="col-md-4">
+		<div class="card mb-2">
+																<!--Changed from portfolio.drawing.url-->
+			<!--Removed line goes here!-->
+				<div class="card-body">
+					<h5 class="card-title">{{ portfolio.title }}</h5>
+					<p class="card-text">{{ project.description }}</p>
+					</a>
+				</div>
+		</div>
+	</div>
   {% endfor %}
 </ul>
 {% endblock %}
 
-<div class="col-md-4">
-  <div class="card mb-2">
-																						<!--Changed from portfolio.drawing.url-->
-		<img class="card-img-top" src="{% static portfolio.drawing %}">
-			<div class="card-body">
-				<h5 class="card-title">{{ portfolio.title }}</h5>
-				<p class="card-text">{{ project.description }}</p>
-				<a href="{% url 'project_detail' project.pk %}"
-					class="btn btn-primary">
-					Read More
-				</a>
-			</div>
-  </div>
-</div>
+<img class="card-img-top" src="{% static portfolio.drawing %}">
 
-
-  <h2>{{  }}</h2>
-  	<img src="{{ .url }}" alt="{{ portfolio.title }}">
