--- a/base/templates/toppingsnsides.html
+++ b/base/templates/toppingsnsides.html
@@ -11,8 +11,8 @@
     <div class="row">
       <div class=" col-md-8 col-md-10 mx-auto">
         <div class="site-heading">
-          <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to Landscape Inc.! </h3>
-          <p class="text-light">We Cut The Grass While You're On Your Ass &nbsp
+          <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to Misha's evil lair! </h3>
+          <p class="text-light">My names Misha! Look at me go!! &nbsp
           </p>
         </div>
       </div>
@@ -28,7 +28,7 @@
   <div class="card my-4">
     <h5 class="card-header">About Us</h5>
     <div class="card-body">
-      <p class="card-text"> We are a small, local landscaping business.</p>
+      <p class="card-text"> My names Misha, and I like to draw both things and stuff.</p>
       <a href="#"
         class="btn btn-danger">Really?? Fascinating..</a>
     </div>
