Added missing style pages, fixed typos, fixed contact form, fixed inconsistent spacing for the most part.

--- a/base/finearts/templates/finearts/homepage.html
+++ b/base/finearts/templates/finearts/homepage.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+{% block style %}
+	<link href="{% static 'finearts/css/style_homepage' %}" rel="stylesheet" media="screen">
+	<title>Homepage</title>
+{% endblock style %}
+
 {% block content %}
 <h1>Home</h1>
-
 <form action="{% url 'search_results' %}" method="get">
 	<div>
 		<input type="radio" id="charcoal" name="q" type="text" value="0">
