--- a/base/finearts/templates/finearts/search_results.html
+++ b/base/finearts/templates/finearts/search_results.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+{% block style %}
+	<link href="{% static 'finearts/css/style_results.css' %}" rel="stylesheet" media="screen">
+	<title>Results</title>
+{% endblock style %}
+
 {% block content %}
 	<a href="{% url 'home' %}"
 		<h1>Home</h1>
