--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -6,12 +6,11 @@
 
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>Django Central</title>
     {% block style %}
     {% endblock style %}
-    <link href="{% static 'blog/css/style_base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'finearts/css/style_base.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="{% static 'thumbnails/favicon.ico' %}" type="image/x-icon">
