--- a/base/templates/toppingsnsides.html
+++ b/base/templates/toppingsnsides.html
@@ -1,6 +1,8 @@
 {% load static %}
+
+
 {% block style %}
-<link href="{% static 'blog/css/style_toppings.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'finearts/css/style_toppings.css' %}" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% endblock style %}
 
@@ -26,7 +28,7 @@
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
   <div class="card my-4">
-    <h5 class="card-header">About Us</h5>
+    <h5 class="card-header">About Me</h5>
     <div class="card-body">
       <p class="card-text"> My names Misha, and I like to draw both things and stuff.</p>
       <a href="#"
