--- a/base/finearts/templates/finearts/contact_success.html
+++ b/base/finearts/templates/finearts/contact_success.html
@@ -1,50 +1,14 @@
-<!--HTML from old website to repurpose-->
+{% extends "base.html" %}
 {% load static %}
-{% load bootstrap4 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery='full' %}
-{% bootstrap_messages %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-      <link href="{% static 'css/image-style.css' %}" rel="stylesheet" media="screen">
-      <title>Success!!!</title>
-  </head>
-  <body>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="stretch-fit">
-        
-      </div>
-    </div>
-    <ul class="page-buttons">
-      <li class="menu-button">
-        <button type="button" class="btn btn-primary btn-lg home-button">
-          <a href="{% url 'finearts:homepage/' %}">Home</a>
-        </button>
-      </li>
-      <li class="menu-button">
-        <button type="button" class="btn btn-primary btn-lg dropdown-toggle art-button" data-toggle="dropdown">Fine Art</button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="{% url 'finearts:illustrator/' %}">Graphic Design</a>
-          <a class="dropdown-item" href="{% url 'finearts:drawings/' %}">Drawing</a>
-          <a class="dropdown-item" href="{% url 'finearts:paintings/' %}">Painting</a>
-        </div>
-      </li>
-      <li class="menu-button">
-        <button type="button" class="btn btn-primary btn-lg reel-button">
-        <a href="{% url 'finearts:reels/' %}">Reels</button>
-      </li>
-      <li class="menu-button">
-        <button type="button" class="btn btn-primary btn-lg contact-button">
-          <a href="{% url 'finearts:email/' %}">Contact Me</a>
-        </button>
-      </li>
-    </ul>
-    
-    <div class="content">
-      <h1>SUCCESS!!!!</h1>
-    </div>
-  </body>
 
-</html>
+{% block style %}
+  <link href="{% static 'finearts/css/style_success.css' %}" rel="stylesheet" media="screen">
+  <title>Success!!!</title>
+{% endblock style %}
+
+{% block content %}
+  <div class="content">
+    <h1>SUCCESS!!!!</h1>
+  </div>
+{% endblock content %}
