--- a/base/templates/toppingsnsides.html
+++ b/base/templates/toppingsnsides.html
@@ -14,6 +14,7 @@
       <div class=" col-md-8 col-md-10 mx-auto">
         <div class="site-heading">
           <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to Misha's evil lair! </h3>
+          <a href="{% url 'home' %}" class="btn btn-danger">YOU GOT ME SEARCHIN!</a>
           <p class="text-light">My names Misha! Look at me go!! &nbsp
           </p>
         </div>
@@ -30,9 +31,9 @@
   <div class="card my-4">
     <h5 class="card-header">About Me</h5>
     <div class="card-body">
-      <p class="card-text"> My names Misha, and I like to draw both things and stuff.</p>
-      <a href="#"
-        class="btn btn-danger">Really?? Fascinating..</a>
+      <p class="card-text">I like to draw both things and stuff.</p>
+      <a href="{% url 'contact' %}"
+        class="btn btn-danger">Really?? Fascinating, I'll HYU</a>
     </div>
   </div>
 </div>
