--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -21,17 +21,11 @@
   </head>
 
   <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
-      <div class="container-fluid" id="mainNavBar">
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
-          <i class="fas fa-align-left"></i>
-          <span>Toggle Sidebar</span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-        </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="stretch-fit">
+
       </div>
-    </nav>
+    </div>
     {% include 'toppingsnsides.html' %}
     {% block navbar %} {% endblock navbar %}
     {% block sidenote %} {% endblock sidenote %}
