--- a/base/finearts/static/finearts/css/style_base.css
+++ b/base/finearts/static/finearts/css/style_base.css
@@ -8,17 +8,10 @@ html, body {
 body {
     font-family: "Roboto", sans-serif;
     font-size: 17px;
-    height: 100%;
-    min-height: 100vh;
 }
 
-.page-buttons {
-    display:flex;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 50px;
+.btn-text {
+    padding-top: 5px;
 }
 
 .jumbotron {
@@ -28,19 +21,14 @@ body {
     background-repeat: no-repeat;
 }
 
-.menu-button {
-    padding: 20px;
-    margin: 5px;
-    line-height: 50px;
-    font-weight: bold;
-    text-align: center;
-}
-
 .btn {
-    color: #7d3d24;
+    display: flex;
+    justify-content: center;
     background-color: #a8a9ae;
     border-color: #a8a9ae;
     width: 178px !important;
+    font-weight: bold;
+    line-height: 20px;
 }
 
 .shadow {
