--- a/base/finearts/static/finearts/css/style_toppings.css
+++ b/base/finearts/static/finearts/css/style_toppings.css
@@ -1,6 +1,7 @@
 .wrapper {
     display: flex;
     width: 100%;
+    background-color: #404a57;
 }
 
 .card {
@@ -10,18 +11,11 @@
 .navbar-nav > li {
     padding-left: 125px;
     padding-right: 100px;
+    padding-top: 20px;
 }
 
 .btn-danger {
     color: #fff;
     background-color: #f00000;
     border-color: #dc281e;
-}
-
-.masthead {
-    background: #3398E1;
-    height: auto;
-    padding-bottom: 15px;
-    box-shadow: 0 16px 48px #E3E7EB;
-    padding-top: 10px;
 }
