--- a/base/finearts/templates/finearts/contact.html
+++ b/base/finearts/templates/finearts/contact.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 
 {% block style %}
@@ -8,16 +9,17 @@
 {% endblock style %}
 
 {% block content %}
-  <div class="page-content">
+<div class="page-content">
+  <div class="email-form">
+    <form class="submission" action = "." method="post">
+      {% csrf_token %}
     <div class="form-container">
-      <br>
-      <form method="post" class="submission">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
+      {{ form|crispy }}
     </div>
+    <div class="form-container">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    </form>
   </div>
+</div>
 {% endblock content %}
