--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -38,3 +38,8 @@
     </footer> -->
   </body>
 </html>
+
+<!-- Old homepage text from old website
+  <p class="text">Victoria "Misha" John is a 27 year old 3D Animator and Graphic Designer from the small town of Brooklin, Maine. She attended the Savannah College of Art and Design and graduated May 2015, when she moved to Charlotte, North Carolina and spent the next few years as a patent designer.</p>
+  <p class="text">Misha now lives in Boulder, Colorado. She loves hiking, kayaking, swimming, rock climbing, sailing, knitting, sculpting, and cooking when she's not drawing or walking her dog.</p>
+-->
