--- a/base/templates/toppingsnsides.html
+++ b/base/templates/toppingsnsides.html
@@ -7,44 +7,44 @@
 {% endblock style %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow mx-auto" id="mainNav">
+<nav class="navbar navbar-expand-lg mx-auto" id="mainNav">
   <div class="container-fluid justify-content-center wrapper" id="mainNavBar">
     <form class="wrapper" action="{% url 'search_results' %}" method="get">
       <ul class="nav navbar-nav w-100 flex-nowrap">
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="charcoal" name="q" type="text" value="0">
-          <label for="charcoal">CharCoal</label>
+          <label class="btn-text" for="charcoal">CharCoal</label>
           </button>
         </li>
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="photoshop" name="q" type="text" value="1">
-          <label for="photoshop">Photoshop</label>
+          <label class="btn-text" for="photoshop">Photoshop</label>
           </button>
         </li>
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="painting" name="q" type="text" value="2">
-          <label for="painting">Painting</label>
+          <label class="btn-text" for="painting">Painting</label>
           </button>
         </li>
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="sketching" name="q" type="text" value="4">
-          <label for="sketching">Sketching</label>
+          <label class="btn-text" for="sketching">Sketching</label>
           </button>
         </li>
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="illustrator" name="q" type="text" value="5">
-          <label for="illustrator">Illustrator</label>
+          <label class="btn-text" for="illustrator">Illustrator</label>
           </button>
         </li>
         <li class="nav-item text-black">
           <button type="submit" class="btn btn-primary nav-link"
                   id="pet_portraits" name="q" type="text" value="6">
-          <label for="pet_portraits">Pet Portraits</label>
+          <label class="btn-text" for="pet_portraits">Pet Portraits</label>
           </button>
         </li>
       </ul>
@@ -56,7 +56,7 @@
 {% block sidenote %}
 
 <!-- Sidebar Widgets Column -->
-<div class="col-md-4 float-right ">
+<div class="sidenote col-md-4 float-right ">
   <div class="card my-4">
     <h5 class="card-header">About Me</h5>
     <div class="card-body">
